<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/bg_top_img"
    tools:context=".MenuCustomization" >

    <RelativeLayout
        android:id="@+id/lytTitlebar"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:layout_alignParentTop="true"
        android:background="@drawable/titlebar_background" >

        <ImageButton
            android:id="@+id/imgNavBack"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:background="@drawable/button_top_style_1"
            android:contentDescription="@string/icon_back"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:src="@drawable/nav_back" />

        <TextView
            android:id="@+id/txtTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@+id/imgNavBack"
            android:shadowColor="@color/shadow"
            android:shadowDx="1.0"
            android:shadowDy="1.0"
            android:shadowRadius="1.0"
            android:text="@string/title_customize"
            android:textColor="@color/text"
            android:textSize="20sp"
            android:textStyle="bold" />
    </RelativeLayout>

    <ScrollView
        android:id="@+id/sclDetail"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_below="@+id/lytTitlebar"
        android:fadeScrollbars="true" >

        <LinearLayout
            android:id="@+id/lytContent"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="15dp" >

            <EditText
                android:id="@+id/edtQuantity"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:background="@drawable/form_background"
                android:hint="@string/quantity"
                android:inputType="number"
                android:padding="12dp"
                android:textSize="16sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:paddingBottom="@dimen/padding_large"
                    android:paddingRight="@dimen/padding_large" >

                    <TextView
                        android:id="@+id/textView1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/padding_large"
                        android:text="@string/lblCustomization"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textSize="@dimen/padding_large" />

                    <CheckBox
                        android:id="@+id/extra_onion"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="15dp"
                        android:text="@string/extra_onion"
                        android:textColor="@color/text"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <CheckBox
                        android:id="@+id/extra_olives"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/extra_olives"
                        android:textColor="@color/text"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <CheckBox
                        android:id="@+id/extra_bacon"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/extra_bacon"
                        android:textColor="@color/text"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <CheckBox
                        android:id="@+id/extra_pinaples"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/extra_olives"
                        android:textColor="@color/text"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <CheckBox
                        android:id="@+id/extra_cheese"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/extra_cheese"
                        android:textColor="@color/text"
                        android:textSize="16sp"
                        android:textStyle="bold" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:paddingLeft="@dimen/padding_large"
                    android:paddingRight="@dimen/padding_large" >

                    <TextView
                        android:id="@+id/textView2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/padding_large"
                        android:text="@string/lblSize"
                        android:textAppearance="?android:attr/textAppearanceMedium" />

                    <RadioGroup
                        android:id="@+id/rdbGrpSize"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical" >

                        <RadioButton
                            android:id="@+id/rdbSizeSmall"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:checked="true"
                            android:contentDescription="@string/rdbSizeSmall"
                            android:text="@string/rdbSizeSmall"
                            android:visibility="visible" />

                        <RadioButton
                            android:id="@+id/rdbSizeMedium"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:contentDescription="@string/rdbSizeMedium"
                            android:text="@string/rdbSizeMedium" />

                        <RadioButton
                            android:id="@+id/rdbSizeLarge"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:contentDescription="@string/rdbSizeLarge"
                            android:text="@string/rdbSizeLarge" />

                        <RadioButton
                            android:id="@+id/rdbSizeXXL"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:contentDescription="@string/rdbSizeXXL"
                            android:text="@string/rdbSizeXXL" />
                    </RadioGroup>
                </LinearLayout>
            </LinearLayout>

            <Button
                android:id="@+id/btnPost"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:background="@drawable/button_style"
                android:padding="15dp"
                android:text="@string/add"
                android:textColor="@color/text"
                android:textSize="16sp"
                android:textStyle="bold" />
        </LinearLayout>
    </ScrollView>

</RelativeLayout>